--- a/.github/workflows/issues-first-greet.yml
+++ b/.github/workflows/issues-first-greet.yml
@@ -23,4 +23,4 @@ jobs:
             Greetings and welcome to our community! As this is the first issue you opened here, we wanted to share some useful infos with you:
             
             - 🗣️ Our community on [Discord](https://discord.gg/safing) is super helpful and active. We also have an AI-enabled support bot that knows Portmaster well and can give you immediate help.
-            - 📖 The [Wiki](https://wiki.safing.io/) answers all common questions and has many important details. If you can't find an answer there, let us know, so we can add anything that's missing.
+            - 📖 The [Wiki](https://wiki.khulnasoft.com/) answers all common questions and has many important details. If you can't find an answer there, let us know, so we can add anything that's missing.
